--- a/css/header.scss
+++ b/css/header.scss
@@ -1,7 +1,65 @@
-.header {
-    .container {
+body {
+    .toggle_menu {
+        display: none;
+    }
+    .header {
+        background-image: url(../images/mobile/image-hero.jpg);
+        background-repeat: no-repeat;
+        background-position: 100% 100%;
+        background-size: cover;
+        position: relative;
         .heading_contents {
-            .header_logo {}
+            padding-left: 16px;
+            padding-right: 16px;
+            padding-top: 30px;
+            margin-bottom: 100px;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
+            position: relative;
+            .header_navigation {
+                position: absolute;
+                top: 0;
+                left: 0;
+                transform: translateX(-100%);
+            }
+        }
+    }
+    .toggle_menu:checked~.header .header_navigation {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 700px;
+        transform: translateX(0);
+        background-color: black;
+        div {
+            padding-left: 16px;
+            padding-right: 16px;
+            padding-top: 30px;
+            margin-bottom: 100px;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
+            margin-bottom: 50px;
+        }
+        .header_navigation--lists {
+            padding: 20px;
+            li {
+                padding-bottom: 20px;
+                a {
+                    font-size: 22px;
+                    text-transform: uppercase;
+                    // font-family: "JosefinSans_Thin";
+                    // font-family: "JosefinSans_Regular";
+                    font-family: "JosefinSans_Light";
+                    line-height: 24px;
+                    font-style: normal;
+                    color: hsl(0, 0%, 100%);
+                }
+            }
         }
     }
 }
