--- a/css/header.scss
+++ b/css/header.scss
@@ -8,21 +8,40 @@ body {
         background-position: 100% 100%;
         background-size: cover;
         position: relative;
-        .heading_contents {
-            padding-left: 16px;
-            padding-right: 16px;
-            padding-top: 30px;
-            margin-bottom: 100px;
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: space-between;
-            position: relative;
-            .header_navigation {
-                position: absolute;
-                top: 0;
-                left: 0;
-                transform: translateX(-100%);
+        padding-bottom: 100px;
+        .container {
+            .heading_contents {
+                padding-top: 30px;
+                padding-left: 16px;
+                padding-right: 16px;
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: space-between;
+                position: relative;
+                margin-bottom: 100px;
+                .header_navigation {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    transform: translateX(-100%);
+                }
+            }
+            .heading_page {
+                max-width: 300px;
+                margin: auto;
+                padding: 20px;
+                border: 2px solid white;
+                margin-left: 16px;
+                margin-right: 16px;
+                .title {
+                    font-size: 45px;
+                    font-family: "JosefinSans_Thin";
+                    font-style: normal;
+                    color: hsl(0, 0%, 100%);
+                    text-transform: uppercase;
+                    line-height: 45px;
+                }
             }
         }
     }
@@ -34,6 +53,7 @@ body {
         height: 700px;
         transform: translateX(0);
         background-color: black;
+        transition: 1s;
         div {
             padding-left: 16px;
             padding-right: 16px;
@@ -50,15 +70,113 @@ body {
             li {
                 padding-bottom: 20px;
                 a {
-                    font-size: 22px;
+                    font-size: 20px;
                     text-transform: uppercase;
-                    // font-family: "JosefinSans_Thin";
-                    // font-family: "JosefinSans_Regular";
                     font-family: "JosefinSans_Light";
-                    line-height: 24px;
+                    line-height: 28px;
                     font-style: normal;
                     color: hsl(0, 0%, 100%);
                 }
+            }
+        }
+    }
+}
+
+@media(min-width: 720px) {
+    body {
+        .header {
+            background-image: url(../images/desktop/image-hero.jpg);
+            background-repeat: no-repeat;
+            background-position: 100% 100%;
+            background-size: cover;
+            position: relative;
+            filter: brightness(80%);
+            .container {
+                padding-top: 50px;
+                max-width: 80%;
+                margin: auto;
+                .heading_contents {
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    justify-content: space-between;
+                    padding-left: 0;
+                    padding-right: 0;
+                    .open_menu {
+                        display: none;
+                    }
+                    .header_navigation {
+                        position: initial;
+                        transform: translateX(0);
+                        div {
+                            display: none;
+                        }
+                        .header_navigation--lists {
+                            display: flex;
+                            flex-direction: row;
+                            align-items: center;
+                            justify-content: space-between;
+                            gap: 20px;
+                            li {
+                                padding-bottom: 0;
+                                a {
+                                    font-size: 18px;
+                                    text-transform: capitalize;
+                                    font-family: "JosefinSans_Regular";
+                                    line-height: 24px;
+                                    font-weight: 500;
+                                    font-style: normal;
+                                    color: hsl(0, 0%, 100%);
+                                    padding-bottom: 8px;
+                                }
+                                a:hover {
+                                    border-bottom: 2px solid white;
+                                }
+                            }
+                        }
+                    }
+                }
+                .heading_page {
+                    max-width: 550px;
+                    margin: 0;
+                    margin-left: 0;
+                    .title {
+                        font-size: 70px;
+                        line-height: 78px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media(min-width: 900px) {
+    body {
+        .header {
+            .container {
+                padding-top: 50px;
+                max-width: 80%;
+                margin: auto;
+                .heading_contents {
+                    .header_navigation {
+                        .header_navigation--lists {
+                            gap: 32px;
+                        }
+                    }
+                }
+                .heading_page {}
+            }
+        }
+    }
+}
+
+@media(min-width: 1220px) {
+    body {
+        .header {
+            .container {
+                padding-top: 50px;
+                max-width: 80%;
+                margin: auto;
             }
         }
     }
